@@ -16,6 +16,7 @@
 .slick--display--thumbnail.slick--skin--asnavfor .slick__slide {
   margin: 0 2px;
   opacity: 0;
+  overflow: visible;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
