@@ -2,7 +2,8 @@
  * @file
  * Detailed stylings are all yours, get yourself dirty.
  */
-.slick--skin--rounded .slide__media {
+.slick--skin--rounded .media, .slick--skin--rounded
+.slide__media {
   border-radius: 50%;
   overflow: hidden;
 }
