@@ -14,6 +14,7 @@
  * @file
  * Detailed stylings are all yours, get yourself dirty.
  */
+.media, 
 .slide__media {
   .slick--skin--rounded & {
     border-radius: 50%;
